# seos-class

./: CMakeLists.txt  Makefile  README.md  class
class.dSYM/Contents/Resources/DWARF/: class
include/: background.h
python/: cclassy.pxd  classy.c  classy.pyx  setup.py
source/: background.c  input.c  perturbations.c  spectra.c
templates/: benchmark-seosv0.ini  concise.ini  seos.ini
test/: test_gsl_seos.c  testseos.py
tools/: quadrature.c
